# refuel-tracker

./: .env.development  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc  CHANGELOG.md  README.md  docker-compose.analytics.yml  docker-compose.app.yml  docker-compose.yml  justfile  nginx.conf  package-lock.json  package.json
.github/workflows/: release-backend.yml  release-dagster.yml  release-frontend.yml  release.yml
analytics/: .releaserc  CHANGELOG.md  Dockerfile  README.md  dagster.yaml  pyproject.toml
analytics/pipeline/: __init__.py  assets.py  iomanagers.py  jobs.py  resources.py  schedules.py
backend/: .dockerignore  .env.example  .releaserc  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  auth.py  main.py  migrations.py  models.py
backend/app/api/: analytics.py  cars.py  categories.py  data_points.py  fuel_prices.py  kilometers.py  metric_definitions.py  metrics.py  refuels.py  stats.py  time_spans.py  transactions.py  units.py
backend/app/storage/: backup_manager.py  car_client.py  data_point_client.py  duckdb_resource.py  kilometer_client.py  metric_definitions_store.py  metric_registry.py  metric_store.py  models.py  parquet_store.py  refuel_client.py  refuel_store.py  sqlite_resource.py  time_span_client.py  time_span_store.py  user_store.py
backend/app/utils/: date_helpers.py
config/: README.md  analytics-envoy.yaml.j2  app-envoy.yaml.j2  envoy-token-secret.yaml.j2  envoy.yaml.j2  opa-config.yaml
config/policies/: user_allowlist.rego
config/templates/: analytics-envoy.yaml.j2  app-envoy.yaml.j2  envoy-hmac-secret.yaml.j2  opa-data.json.j2
frontend/: .dockerignore  .releaserc  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: .gitkeep  manifest.json
frontend/scripts/: generate-favicons.js
frontend/src/components/: AddMetricForm.tsx  AddMetricValueForm.tsx  AddRefuelForm.tsx  AddTransactionForm.tsx  ConfirmationDialog.tsx  DataPointList.tsx  DataPointStatistics.tsx  ErrorDialog.tsx  Layout.tsx  MetricDefinitionForm.tsx  MetricDefinitionList.tsx  RefuelList.tsx  RefuelPriceChart.tsx  RefuelStats.tsx
frontend/src/components/auth/: AuthGuard.tsx  SignInPage.tsx  UserProfile.tsx  index.ts
frontend/src/components/cars/: AddCarForm.tsx  CarCard.tsx  CarDetailsContent.tsx  CarDetailsForm.tsx  CarDetailsPanel.tsx  CarForm.tsx  CarList.tsx  CarPageHeader.tsx  CarStatisticsTab.tsx  CarsTab.tsx  KilometerAggregationChart.tsx  KilometerChart.tsx  KilometerStatsContent.tsx  RecentKilometersPanel.tsx  RecentRefuelsPanel.tsx  ShareCarContent.tsx  SharedUsersPanel.tsx
frontend/src/components/common/: ActionBar.tsx  ConfirmationDialog.tsx  DynamicPage.tsx  EmptyPanel.tsx  EmptyState.tsx  ErrorDialog.tsx  FavoriteToggleButton.tsx  FilterCard.tsx  FilterSelect.tsx  FloatingActionButton.tsx  GridLayout.tsx  IconButton.tsx  Icons.tsx  LanguageSwitcher.tsx  Layout.tsx  LoadingSpinner.tsx  PageContainer.tsx  PageHeader.tsx  PageTransition.tsx  PageTransitionWrapper.tsx  Panel.tsx  PeriodFilter.tsx  PeriodSelector.tsx  ResponsiveDate.tsx  SettingCard.tsx  Snackbar.tsx  StackLayout.tsx  StandardCard.tsx  StandardForm.tsx  SummaryCard.tsx  ThemeSelector.tsx  YearSelector.tsx  index.ts
frontend/src/components/data-tracking/: AddDataPointForm.tsx  DataPointList.tsx  DataPointStatistics.tsx
frontend/src/components/distance/: DistanceForm.tsx
frontend/src/components/fuel/: ChartLoadingFallback.tsx  DailyPriceChangesChart.tsx  DailyStatsChart.tsx  FuelPriceChart.tsx  FuelTypeFilter.tsx  FuelTypeSelector.tsx  StationDailyStatsChart.tsx  StationLoadingFallback.tsx  StationMetaInfo.tsx  StationPriceChangesChart.tsx  StationPriceChart.tsx  StationSubtitle.tsx  TimeRangeFuelTypeFilter.tsx
frontend/src/components/fuel-prices/: FavoriteStationsList.tsx  PriceStatistics.tsx  SearchResultsList.tsx  SearchStationsForm.tsx  StationCard.tsx  StationsList.tsx
frontend/src/components/metrics/: AddMetricValueForm.tsx  MetricDefinitionForm.tsx  MetricDefinitionList.tsx
frontend/src/components/refuels/: AddRefuelForm.tsx  KilometerList.tsx  RefuelConsumptionChart.tsx  RefuelCostPer100kmChart.tsx  RefuelDistanceChart.tsx  RefuelDistributionChart.tsx  RefuelForm.tsx  RefuelList.tsx  RefuelPriceChart.tsx  RefuelStats.tsx
frontend/src/components/station/: StationFavoriteButton.tsx  StationPageHeader.tsx  index.ts
frontend/src/components/stats/: AvgPriceChart.tsx  BrandsContent.tsx  DetailContent.tsx  MonthSelector.tsx  PlaceAvgPriceChart.tsx  PlacePriceActivityChart.tsx  PlaceVarianceChart.tsx  PlacesContent.tsx  PriceActivityChart.tsx  PriceDirectionChart.tsx  StationAllFuelsDailyChart.tsx  StationComparisonChart.tsx  StationStatsContent.tsx  StationsContent.tsx  StatsAggregateTables.tsx  StatsContent.tsx  StatsFilters.tsx  TimeRangeSelector.tsx  VarianceChart.tsx  chartUtils.tsx  placeChartUtils.tsx
frontend/src/components/time-spans/: AddTimeSpanForm.tsx  EditTimeSpanForm.tsx  TimeSpanList.tsx  TimeSpanStatistics.tsx
frontend/src/components/transactions/: AddTransactionForm.tsx  TransactionList.tsx
frontend/src/lib/: api.ts  auth.ts  chartConfig.tsx  dateUtils.ts  formatPrice.tsx  useSnackbar.ts
frontend/src/lib/auth/: AuthContext.tsx  UserContext.tsx
frontend/src/lib/filterCollapse/: FilterCollapseContext.tsx  cookies.ts  index.ts
frontend/src/lib/fuelType/: FuelTypeContext.tsx  cookies.ts  index.ts  labels.ts
frontend/src/pages/: _app.tsx  _document.tsx  cars.tsx  categories.tsx  data-tracking.tsx  fuel-prices.tsx  index.tsx  metrics.tsx  refuels.tsx  settings.tsx  time-spans.tsx  units.tsx
frontend/src/styles/: globals.css
lib/: README.md
lib/metrics/: README.md  pyproject.toml
lib/metrics/fueldata/: __init__.py  aggregates.py  client.py  compressed.py  models.py  monthly_aggregates.py  prices.py  stations.py  utils.py
lib/tankerkoenig/: README.md  pyproject.toml
lib/tankerkoenig/tankerkoenig/: __init__.py  client.py  models.py
scripts/: .dockerignore  Dockerfile  README.md  pyproject.toml
scripts/migrations/: 000_import_from_duckdb.py
(+68 files in other folders)
