[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analytics-pipeline"
version = "0.1.0"
description = "Dagster data pipeline for personal data tracker"
requires-python = ">=3.11"
authors = [
    {name = "Jan Zimmermann", email = "jzmrn@gmx.de"},
]
dependencies = [
    "dagster>=1.5.0",
    "dagster-webserver>=1.5.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "requests>=2.31.0",
    "pydantic>=2.10.6",
    "tankerkoenig-client @ {root:uri}/../lib/tankerkoenig",
    "metrics @ {root:uri}/../lib/metrics",
    "duckdb>=1.4.2",
    "dagster-duckdb>=0.28.2",
    "dagster-duckdb-pandas>=0.28.2",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[tool.dagster]
module_name = "pipeline"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "I"
]
