[project]
name = "refuel-tracker-backend"
version = "0.1.0"
description = "Refuel Tracker Backend handling fuel prices, fuel consumption and user data."
authors = [{name = "Jan Zimmermann", email = "jzmrn@gmx.com"}]
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.26",
    "aiofiles>=23.2.1",
    "google-api-python-client>=2.187.0",
    "httpx>=0.25.0",
    "tankerkoenig-client @ {root:uri}/../lib/tankerkoenig",
    "metrics @ {root:uri}/../lib/metrics"
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "black>=26.3.1",
    "ruff>=0.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[[tool.uv.index]]
url = "https://pypi.python.org/simple"
