[project]
name = "refuel-tracker-scripts"
version = "0.1.0"
description = "One-time scripts"
authors = [{name = "Jan Zimmermann", email = "jzmrn@gmx.com"}]
requires-python = ">=3.11"

dependencies = [
    "duckdb>=1.3.2",
    "pandas>=2.0.3",
    "pyarrow>=14.0.0",
    "pytz",
    "metrics @ {root:uri}/../lib/metrics",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.10.0",
    "ruff>=0.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["migrations"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[[tool.uv.index]]
url = "https://pypi.python.org/simple"
